<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.varvet.barcodereadersample.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="382dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/textview_scan_api"
        android:textAlignment="textStart"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:autoLink="all"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/no_barcode_captured"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/scan_barcode_button"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/scan_barcode_button"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_below="@id/result_textview"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:text="@string/scan_barcode_button"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <RadioButton
        android:id="@+id/saveButton"
        android:layout_width="133dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:checked="false"
        android:text="@string/save_key"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_textview"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="371dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/textview_ip"
        android:textAlignment="textStart"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/IP_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:layout_constraintVertical_bias="0.959" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/IP_input_layout"
        android:layout_width="296dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:layout_constraintVertical_bias="0.345">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/IP_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ip_address"
            android:inputType="text" />
        <!--android:inputType="number|numberDecimal" -->
        <!--android:focusableInTouchMode="true"/>-->

    </android.support.design.widget.TextInputLayout>

    <RadioButton
        android:id="@+id/saveIPButton1"
        android:layout_width="99dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save_ip"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IP_input_layout"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/connect"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/connect_resume_button"
        android:padding="15dp"
        android:text="@string/connect"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveIPButton1"
        app:layout_constraintVertical_bias="0.24000001" />

    <Button
        android:id="@+id/resumeButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="125dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/connect_resume_button"
        android:clickable="false"
        android:text="RESUME"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveIPButton1"
        app:layout_constraintVertical_bias="0.937" />


</android.support.constraint.ConstraintLayout>
